refactor: fix security config